UHF-3503: Refresh social media styles to be more BEM

--- a/templates/block/block--hdbt-content-social-sharing-block.html.twig
+++ b/templates/block/block--hdbt-content-social-sharing-block.html.twig
@@ -1,2 +1,4 @@
-<span>{{ 'Share'|t({}, {'context': 'The helper text before the social media share buttons'}) }}</span>
-{{ content }}
+<div class="social-media">
+  <span class="social-media__title">{{ 'Share'|t({}, {'context': 'The helper text before the social media share buttons'}) }}</span>
+  {{ content }}
+</div>
