--- a/templates/paragraphs/paragraph--image.html.twig
+++ b/templates/paragraphs/paragraph--image.html.twig
@@ -9,15 +9,10 @@
 
       {# Check if there is image set and print it with correct aspect ratio #}
       {% if content.field_image|render %}
-        <figure class="image">
-          {{ content.field_image }}
-
-          {% if image_caption %}
-            <figcaption class="image__caption">
-              {{ image_caption }}
-            </figcaption>
-          {% endif %}
-        </figure>
+        {% include '@hdbt/misc/image-with-caption.twig' with {
+          image: content.field_image,
+          image_caption: image_caption
+        } %}
       {% endif %}
 
     {% endblock component_content %}
