UHF-3503: Remove unused template code

--- a/templates/module/helfi-news-item/block--views-block--news-latest-news.html.twig
+++ b/templates/module/helfi-news-item/block--views-block--news-latest-news.html.twig
@@ -25,13 +25,10 @@
  * @see template_preprocess_block()
  */
 #}
-<div{{ attributes }}>
-  {{ title_prefix }}
-  {% if label %}
-    <h2{{ title_attributes }}>{{ label }}</h2>
-  {% endif %}
-  {{ title_suffix }}
-  {% block content %}
-    {{ content }}
-  {% endblock %}
-</div>
+{% if label %}
+  <h2{{ title_attributes.addClass('sidebar_block_heading') }}>{{ label }}</h2>
+{% endif %}
+{% block content %}
+  {{ content }}
+{% endblock %}
+
