UHF-3503: Style news page, improve generic page styling

--- a/src/scss/components/content/__index.scss
+++ b/src/scss/components/content/__index.scss
@@ -3,6 +3,7 @@
 @import 'cookie-compliance';
 @import 'errand-service';
 @import 'highlighted';
+@import 'news-page';
 @import 'quoted';
 @import 'service-channel';
 @import 'service';
