--- a/templates/content/node.html.twig
+++ b/templates/content/node.html.twig
@@ -78,7 +78,8 @@
   node.isSticky() ? 'node--sticky',
   not node.isPublished() ? 'node--unpublished',
   view_mode ? 'node--view-mode-' ~ view_mode|clean_class,
-  first_paragraph_grey ? 'has-first-gray-bg-block'
+  first_paragraph_grey ? 'has-first-gray-bg-block',
+  node_class,
 ]
 %}
 
