UHF-3503: Fix <figure> margins and image styles

--- a/src/scss/components/media/_image.scss
+++ b/src/scss/components/media/_image.scss
@@ -1,12 +1,18 @@
-.media--image__content {
-  picture, img {
+.image {
+  margin: 0; // resets user agent margins from <figure>
+
+  picture {
     display: block;
-    line-height: 0;
-    width: 100%;
+  }
+
+  img {
+    display: block;
+    height: auto;
+    width: 100%; //TODO: should we change this to max-width?
   }
 }
 
-.media--image__caption {
+.image__caption {
   @include font-size(16px, 24px);
   padding: $spacing $spacing-and-half 0;
 
