--- a/templates/module/helfi-news-item/node--news-item--tiny-teaser.html.twig
+++ b/templates/module/helfi-news-item/node--news-item--tiny-teaser.html.twig
@@ -19,7 +19,7 @@
   {% if published_at is not empty %}
     {% set html_published_at = published_at|format_date('custom', 'Y-m-d') ~ 'T' ~ published_at|format_date('custom', 'H:i') %}
     <time datetime="{{ html_published_at }}" class="news-listing__datetime news-listing__datetime--published">
-      <span class="visually-hidden">{{ 'Published'|t({}, {'context': 'The helper text before the node published timestamp for screen readers'}) }}</span>
+      <span class="visually-hidden">{{ 'Published'|t({}, {'context': 'The helper text before the node published timestamp'}) }}</span>
       {{ published_at|format_date('publication_date_format') }}
     </time>
   {% endif %}
