--- a/templates/module/helfi-news-item/node--news-item.html.twig
+++ b/templates/module/helfi-news-item/node--news-item.html.twig
@@ -14,7 +14,7 @@
       <div class="content-date">
         {% set html_published_at = published_at|format_date('custom', 'Y-m-d') ~ 'T' ~ published_at|format_date('custom', 'H:i') %}
         <time datetime="{{ html_published_at }}" class="content-date__datetime content-date__datetime--published">
-          <span class="visually-hidden">{{ 'Published'|t({}, {'context': 'The helper text before the node published timestamp for screen readers'}) }}</span>
+          <span class="visually-hidden">{{ 'Published'|t({}, {'context': 'The helper text before the node published timestamp'}) }}</span>
           {{ published_at|format_date('publication_date_format') }}
         </time>
 
