--- a/templates/content/tpr-unit.html.twig
+++ b/templates/content/tpr-unit.html.twig
@@ -13,7 +13,7 @@
   {% set in_menu =  TRUE %}
 {% endif %}
 
-{% embed '@helfi_tpr/tpr-unit.html.twig' with {in_menu: in_menu} %}
+{% embed '@hdbt/module/helfi_tpr/tpr-unit.html.twig' with {in_menu: in_menu} %}
   {% block sidebar_block %}
     {{ drupal_entity('block', block_name, check_access=false) }}
   {% endblock sidebar_block %}
