--- a/src/scss/components/paragraphs/_liftup-with-image.scss
+++ b/src/scss/components/paragraphs/_liftup-with-image.scss
@@ -5,10 +5,15 @@ $breakpoint-design-image-on-left-right: 830px;
 }
 
 .liftup-with-image__image {
-  line-height: 0;
+  picture {
+    width: 100%;
+  }
 
   img {
+    display: block;
+    height: auto;
     width: 100%;
+    @include loading-image-background();
   }
 }
 
