UHF-3503: Unify image handling on site

--- a/src/scss/components/content/_news-page.scss
+++ b/src/scss/components/content/_news-page.scss
@@ -18,9 +18,7 @@
 }
 
 .news-listing__img img {
-  display: block;
-  height: auto;
-  width: 100%;
+  @include image-defaults($width: 100%, $max-width: null);
 }
 
 .news-listing__img .image-placeholder {
