--- a/src/scss/components/paragraphs/_liftup-with-image.scss
+++ b/src/scss/components/paragraphs/_liftup-with-image.scss
@@ -10,9 +10,7 @@ $breakpoint-design-image-on-left-right: 830px;
   }
 
   img {
-    display: block;
-    height: auto;
-    width: 100%;
+    @include image-defaults($width: 100%, $max-width: null);
     @include loading-image-background();
   }
 }
@@ -391,9 +389,8 @@ $breakpoint-design-image-on-left-right: 830px;
 
     img {
       @include breakpoint($breakpoint-l) {
-        height: 100%;
+        @include image-defaults($height: 100%, $width: 100%, $max-width: null);
         object-fit: cover;
-        width: 100%;
       }
     }
   }
