UHF-3364: UHF-3364: hide react & share until statistics cookies accepted

--- a/src/scss/components/content/_cookie-compliance.scss
+++ b/src/scss/components/content/_cookie-compliance.scss
@@ -85,7 +85,8 @@
   }
 }
 
-.embedded-content-cookie-compliance {
+.embedded-content-cookie-compliance,
+.react-and-share-cookie-compliance {
   align-content: center;
   align-items: center;
   background-color: $color-black-5;
