UHF-3424: Remove extra spaces from address elements

--- a/templates/misc/address-plain.html.twig
+++ b/templates/misc/address-plain.html.twig
@@ -38,38 +38,24 @@
 #}
 <p class="address" translate="no">
   {% if given_name or family_name %}
-    <span class="given-name">
-      {{ given_name }} {{ family_name }}
-    </span>
+    <span class="given-name">{{ given_name }} {{ family_name }}</span>
   {% endif %}
   {% if organization %}
-    <span class="organization">
-      {{ organization }}
-    </span>
+    <span class="organization">{{ organization }}</span>
   {% endif %}
   {% if address_line1 %}
-    <span class="address-line1">
-      {{ address_line1 }}
-    </span>
+    <span class="address-line1">{{ address_line1 }}</span>
   {% endif %}
   {% if address_line2 %}
-    <span class="address-line2">
-      {{ address_line2 }}
-    </span>
+    <span class="address-line2">{{ address_line2 }}</span>
   {% endif %}
   {% if dependent_locality.code %}
-    <span class="dependent-locality-code">
-      {{ dependent_locality.code }}
-    </span>
+    <span class="dependent-locality-code">{{ dependent_locality.code }}</span>
   {% endif %}
   {% if postal_code or administrative_area.code %}
-    <span class="postal-code">
-      {{ postal_code }} {{ administrative_area.code }}
-    </span>
+    <span class="postal-code">{{ postal_code }} {{ administrative_area.code }}</span>
   {% endif %}
   {% if locality.code %}
-    <span class="locality">
-      {{ locality.code }}
-    </span>
+    <span class="locality">{{ locality.code }}</span>
   {% endif %}
 </p>
