--- a/templates/paragraphs/paragraph--gallery.html.twig
+++ b/templates/paragraphs/paragraph--gallery.html.twig
@@ -6,35 +6,24 @@
     }
   %}
     {% block component_content %}
-
-        <div class="gallery__main splide">
-          <div class="gallery__slides splide__track">
-            <ul class="splide__list">
-              {{ content }}
-            </ul>
-          </div>
-        </div>
-        <div class="gallery__slide-count"></div>
-        <div class="gallery__thumbnails js-gallery__thumbnails">
-          <ul class="gallery__thumbnails__list">
-            {% for key, image in gallery_slide_thumbnails %}
-              {% set gallery_thumbnails_item = create_attribute({'class': 'gallery__thumbnails__item'}).setAttribute('role', 'button').setAttribute('tabindex', '0') %}
-              {% if gallery_slide_thumbnails_alt_texts[key].caption %}
-                {% set alt = gallery_slide_thumbnails_alt_texts[key].caption %}
-                {% set gallery_thumbnails_item = gallery_thumbnails_item.setAttribute('aria-label', gallery_slide_thumbnails_alt_texts[key].caption) %}
-              {% elseif gallery_slide_thumbnails_alt_texts[key].alt is not same as('""') %}
-                {% set alt = gallery_slide_thumbnails_alt_texts[key].alt %}
-                {% set gallery_thumbnails_item = gallery_thumbnails_item.setAttribute('aria-label', gallery_slide_thumbnails_alt_texts[key].alt) %}
-              {% else %}
-                {% set alt = false %}
-              {% endif %}
-              <li{{ gallery_thumbnails_item }}>
-                {{ drupal_image(image.uri.value, 'gallery_thumbnail', { alt: alt }, responsive=true) }}
-              </li>
-            {% endfor %}
+      <div class="gallery__main splide">
+        <div class="gallery__slides splide__track">
+          <ul class="splide__list">
+            {{ content }}
           </ul>
         </div>
-
+      </div>
+      <div class="gallery__slide-count"></div>
+      <div class="gallery__thumbnails js-gallery__thumbnails">
+        <ul class="gallery__thumbnails__list">
+          {% for key, image in gallery_slide_thumbnails %}
+            {% set gallery_thumbnails_item = create_attribute({'class': 'gallery__thumbnails__item'}).setAttribute('role', 'button').setAttribute('tabindex', '0') %}
+            <li{{ gallery_thumbnails_item }}>
+              {{ drupal_image(image.gallery_slide.uri.value, 'gallery_thumbnail', { alt: image.gallery_slide_caption, width: '200', height: '200' }, responsive=true) }}
+            </li>
+          {% endfor %}
+        </ul>
+      </div>
     {% endblock component_content %}
   {% endembed %}
 {% endblock paragraph %}
