UHF-3364: Fix margin bug

--- a/src/scss/components/content/_cookie-compliance.scss
+++ b/src/scss/components/content/_cookie-compliance.scss
@@ -188,13 +188,9 @@
       padding: $spacing-quarter;
     }
   }
-  .layout-main-wrapper &:last-child {
-    margin-bottom: -$spacing-sextuple;
-
-    .message {
-      @include breakpoint($breakpoint-m) {
-        margin-bottom: 80px;
-      }
+  .layout-main-wrapper &:last-child .message {
+    @include breakpoint($breakpoint-m) {
+      margin-bottom: 80px;
     }
   }
 }
