--- a/src/scss/components/content/_quoted.scss
+++ b/src/scss/components/content/_quoted.scss
@@ -10,7 +10,7 @@
     content: "”"; // Defaults to finnish quotation syntax https://jkorpela.fi/suomi/lain.html
   }
 
-  [lang='en']&::before,
+  &[lang='en']::before,
   [lang='en'] &::before {
     content: "“"; // Uses english format when appropriate
   }
